--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.scroll::-webkit-scrollbar {
+  border-radius: 10px;
+  width: 15px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: #c1c1c1;
+  border: 4px solid transparent;
+  border-radius: 10px;
+  background-clip: padding-box;
+}
